# sureapp-coding-challenge

./: .gitignore  README.md  pyproject.toml
acme_insurance/: settings.py  urls.py
insurance_app/: admin.py  enums.py  models.py  pricing.py  tests.py  urls.py  validators.py  views.py
insurance_app/migrations/: 0001_alter_stateconfig_monthly_tax_rate.py  0001_initial.py  0002_quote_buyer_name.py  0003_alter_quote_coverage_type.py  state_config.py
