[tool.poetry]
name = "insurance-quote-app"
version = "0.1.0"
description = ""
authors = ["Roshin <theroshin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
